--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -86,7 +86,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="service_model" panelheight="auto" name="service_model"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="service_model" panelheight="auto" name="service_model"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
@@ -106,10 +106,10 @@
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value placeholderclass" name="startdate" placeholder="开始时间">
+                                <input class="easyui-datebox value placeholderclass" editable="false" name="startdate" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value placeholderclass" name="stopdate" placeholder="结束时间">
+                                <input class="easyui-datebox value placeholderclass" editable="false" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
                         <tr>
@@ -119,7 +119,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value" id="out_in" style="width:130px" panelheight="auto" name="out_in"></select>
+                                <select class="easyui-combobox value" editable="false" id="out_in" style="width:130px" panelheight="auto" name="out_in"></select>
                             </td>
 
                             <td class="search_margin">
@@ -128,7 +128,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
+                                <select class="easyui-combobox value" editable="false" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -144,7 +144,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="declaration_type" panelheight="auto" name="declaration_type"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="declaration_type" panelheight="auto" name="declaration_type"></select>
                             </td>
                         </tr>
                     </table>
