--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -45,12 +45,6 @@
         });
                   
     })
-
-
-    /**
-    easyui number placeholder
-    */
-
 </script> 
 <div class="ibox-content">
     <div class="table-responsive">
@@ -107,7 +101,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="businessin_object" panelheight="auto" name="businessin_object"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="businessin_object" panelheight="auto" name="businessin_object"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
@@ -126,10 +120,10 @@
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value  placeholderclass" name="startdate" placeholder="开始时间">
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="startdate" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value  placeholderclass" name="stopdate" placeholder="结束时间">
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
                         <tr>
@@ -139,7 +133,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
+                                <select class="easyui-combobox value" editable="false" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
