--- a/Views/Declare/OnelineOut_Edit.cshtml
+++ b/Views/Declare/OnelineOut_Edit.cshtml
@@ -64,7 +64,7 @@
             <tr>
                 <td>
                     <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                    <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" type="text" name="GUANWUJIESHOUTIME" disabled="disabled" />
+                    <input class="easyui-textbox  time_input" type="text" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" disabled="disabled" name="GUANWUJIESHOUTIME" />
                     <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
