--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -24,7 +24,6 @@
         { code: 'FOCUSTOMSNO', name: 'FO号' },
         { code: 'ARRIVEDNO', name: '运抵编号' },
     ];
-
     $(function () {
         loadListGrid('Declare/SpecialSupervision_Edit');
         $('#searchform #search_condition_date').combobox({
@@ -50,7 +49,7 @@
                     <th data-options="field:'text',width:80,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100,sortable:true">关务状态</th>
-                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
+                    <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
                 </tr>
             </thead>
             <thead>
@@ -85,35 +84,30 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="service_model" panelheight="auto" name="service_model"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="service_model" panelheight="auto" name="service_model"></select>
                             </td>
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>申报方式</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="declare_type" panelheight="auto" name="declare_type"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="declare_type" panelheight="auto" name="declare_type"></select>
                             </td>
-
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
                             </td>
                             <td>
                                 <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
                             </td>
-
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value placeholderclass" name="startdate" placeholder="开始时间">
+                                <input class="easyui-datebox value placeholderclass" editable="false" name="startdate" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value placeholderclass" name="stopdate" placeholder="结束时间">
+                                <input class="easyui-datebox value placeholderclass" editable="false" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
                         <tr>
@@ -123,7 +117,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
+                                <select class="easyui-combobox value" editable="false" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -131,10 +125,9 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value is_check"  style="width:130px" panelheight="auto" name="LIHUOSIGN"></select>
+                                <select class="easyui-combobox value is_check" editable="false" style="width:130px" panelheight="auto" name="LIHUOSIGN"></select>
                             </td>
                         </tr>
-
                     </table>
                 </form>
             </div>
